# parse-gif

./: CMakeLists.txt  conanfile.txt  gif-breakdown.txt
include/: parsegif.h
src/: BinaryFileBuf.cpp  BinaryFileBuf.h  CMakeLists.txt  Decoder.cpp  Decoder.h  Error.cpp  Error.h  ParseGif.cpp  ParseGif.h  Pixel.h  Utility.h
src/Block/: ApplicationExtension.cpp  ApplicationExtension.h  Block.cpp  Block.h  ColorTable.cpp  ColorTable.h  CommentExtension.cpp  CommentExtension.h  GlobalColorTable.cpp  GlobalColorTable.h  GraphicControlExtension.cpp  GraphicControlExtension.h  Header.cpp  Header.h  ImageDescriptor.cpp  ImageDescriptor.h  LocalColorTable.cpp  LocalColorTable.h  LogicalScreenDescriptor.cpp  LogicalScreenDescriptor.h  ParseSubBlock.cpp  ParseSubBlock.h  PlainTextExtension.cpp  PlainTextExtension.h
tests/: CMakeLists.txt  ParseGif.cpp  TestAgainstPng.cpp  TestDecoder.cpp  compare-debug-output
tests/data/: animated.txt  compare-debug  compare2  office.txt  sample_1.txt  test-image-stream
